--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,14 @@ button {
 button:active {
   @apply opacity-70;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
